Multiple fixes to Docker image, Fedora upgrade, pg_hba.conf update, etc

--- a/citus_petset/kubernetes/sec-citus.yaml
+++ b/citus_petset/kubernetes/sec-citus.yaml
@@ -6,6 +6,6 @@ metadata:
     component: citus
 type: Opaque
 data:
-  password-superuser: YXRvbWlj
-  password-admin: YXRvbWlj
-  password-standby: YXRvbWlj
+  password-superuser: QXhpYWw=
+  password-admin: QXhpYWw=
+  password-standby: QXhpYWw=
