--- a/citus_petset/kubernetes/ps-citus.yaml
+++ b/citus_petset/kubernetes/ps-citus.yaml
@@ -32,7 +32,7 @@ spec:
     spec:
       containers:
       - name: citus
-        image: jberkus/citus:0.9
+        image: evgkib/citusdb
         env:
         - name: POD_GROUP
           value: citus
